Formating (Commit test)

--- a/currentBSSBackup.html
+++ b/currentBSSBackup.html
@@ -217,9 +217,11 @@
     </head>
     <body onload='main()'>
 
-        <canvas id='gl-canvas'></canvas>
+    <canvas id='gl-canvas'></canvas>
     <canvas id='ui-canvas'></canvas>
     <canvas id='tex-canvas' width='2048' height='2048'></canvas>
+
+<span>
 
 <div id='abilityUI' style='margin:5px;padding:0px;margin-top:35px;position:fixed'>
     
@@ -1796,8 +1798,9 @@
 <div class='autoHotbarButton' style='position:fixed;top:98.5%;left:55%;width:35px;height:14px;z-index:-1;transform:translate(-50%,-50%);border-radius:10px;padding-top:1px;font-family:trebuchet ms;font-size:7px;text-align:center'></div>
 <div class='autoHotbarButton' style='position:fixed;top:98.5%;left:65%;width:35px;height:14px;z-index:-1;transform:translate(-50%,-50%);border-radius:10px;padding-top:1px;font-family:trebuchet ms;font-size:7px;text-align:center'></div>
 <div class='autoHotbarButton' style='position:fixed;top:98.5%;left:75%;width:35px;height:14px;z-index:-1;transform:translate(-50%,-50%);border-radius:10px;padding-top:1px;font-family:trebuchet ms;font-size:7px;text-align:center'></div>
+</span>
 
-
+<span>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js'></script>
@@ -1819,6 +1822,7 @@
 <script src="https://cdn.jsdelivr.net/gh/Dddatt/bss/music_surpriseParty.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/Dddatt/bss/music_infernoToken.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/Dddatt/bss/music_flameFuelToken.js"></script>
+</span>
 
 <script type='application/javascript'>
 
