fixed things now should work hopefully plz

--- a/currentBSSBackup.html
+++ b/currentBSSBackup.html
@@ -2,20 +2,17 @@
 
 notes to self:
 
--add more sounds 4 inspire and things
--add petal storm passive
 -update background after the noob shop and star hall
 -add more mobs
 -adjust balloon size
 -fix items can be used with super smoothie|purp pot
--fix the big rock and ground z fighting in front of 100 bee zone from far away cuz of depth buffer error
+-fix the big rock and ground z fighting in front of 10 bee zone from far away cuz of depth buffer error
 -add hitbox 4 coco disp
 -add a way to scale bee instances
 -fix the rocks by pine tree
 -add werewolf cave
 -fix all the 5-15 bee zone skips
 -add requirements to use cannons/flinging thingies
--fix text on mythic egg
 -fix html <defs> needing different ids making gradients break in svgs
 -fix random words in item svgs in mask requirements
 -add r/b portals
@@ -1951,6 +1948,7 @@ w, coconut:204 oh dear
 <script src='https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js'></script>
 
 <script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@v1.4.0/dialogue.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@v1.4.0/beeInfo.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@v1.4.0/MathHelper.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@v1.4.0/GLSLShaders.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@v1.4.0/mapMesh.js"></script>
