added ladybugs to fields

--- a/currentBSSBackup.html
+++ b/currentBSSBackup.html
@@ -1948,28 +1948,28 @@ w, coconut:204 oh dear
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js'></script>
 
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/dialogue.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/playerGear.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/MathHelper.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/GLSLShaders.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/mapMesh.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_popStar.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_scorchingStar.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_gummyStar.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_frog.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_inflateBalloons.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_haste.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_bombToken.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_markToken.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_melodyToken.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_focusToken.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_rageToken.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_surpriseParty.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_infernoToken.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_flameFuelToken.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_babyLove.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_boostToken.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/Dddatt/bss@1.4.3/music_inspireToken.js"></script>
+<script src="dialogue.js"></script>
+<script src="playerGear.js"></script>
+<script src="MathHelper.js"></script>
+<script src="GLSLShaders.js"></script>
+<script src="mapMesh.js"></script>
+<script src="music_popStar.js"></script>
+<script src="music_scorchingStar.js"></script>
+<script src="music_gummyStar.js"></script>
+<script src="music_frog.js"></script>
+<script src="music_inflateBalloons.js"></script>
+<script src="music_haste.js"></script>
+<script src="music_bombToken.js"></script>
+<script src="music_markToken.js"></script>
+<script src="music_melodyToken.js"></script>
+<script src="music_focusToken.js"></script>
+<script src="music_rageToken.js"></script>
+<script src="music_surpriseParty.js"></script>
+<script src="music_infernoToken.js"></script>
+<script src="music_flameFuelToken.js"></script>
+<script src="music_babyLove.js"></script>
+<script src="music_boostToken.js"></script>
+<script src="music_inspireToken.js"></script>
 
 <script type='application/javascript'>
 
@@ -17774,6 +17774,13 @@ objects.mobs.push(new Ladybug([-53,5,9.5+15],{minX:-50,maxX:-50+18,minZ:8.5,maxZ
 
 //pineap
 objects.mobs.push(new Beetle([-71.5+17,13.5,78+9],{minX:-71.5,maxX:-71.5+19,minZ:78,maxZ:78+15,minY:11.5,maxY:18},5))
+
+//straw
+objects.mobs.push(new Ladybug([7.5+1,3,47+14],{minX:7.5,maxX:7.5+15,minZ:47,maxZ:47+15,minY:1,maxY:6},2))
+objects.mobs.push(new Ladybug([7.5+14,3,47+1],{minX:7.5,maxX:7.5+15,minZ:47,maxZ:47+15,minY:1,maxY:6},3))
+
+//mush
+objects.mobs.push(new Ladybug([-6+11,-0.5,29+12],{minX:-6,maxX:-6+19,minZ:29,maxZ:29+13,minY:-2,maxY:4},1))
 
 
 
