fixed some quest bugs

--- a/currentBSSBackup.html
+++ b/currentBSSBackup.html
@@ -14859,7 +14859,7 @@ let NPCs={
         viewMatrix:[24,2,0.5,MATH.HALF_PI,-0.25],
         exclaimPos:[29,0.5,0.5],
         dialogueIndex:0,
-        dialogue:window.dialogue_blackBear(player),
+        dialogue:window.dialogue_blackBear(player,items),
         mesh:new Mesh(),
         meshParams:{x:0.5,y:0,z:-31.5,r:1,s:1.2,texture:{face:{u:0,v:0},torso:{texture:false,u:0,v:0.5}}}
     },
