nectar stats bugtested and hive color makings tested(still unbalanced, red sucks)  :)

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 so erm the ka version is really behind but idk any new way to save some space ;-;
 
-r, in rose:95 :(
-b, in pine tree:90-150 if u rush or not
-w, coconut:204 oh dear
+sheesh honey spikes up with the new nectar
+
+r, in pep: 315b ._.
+b, in pine: 290b - 611b if u rush convert all the balloons or not O_O
+w, in coco: 600b woah ^-^
 
 
 -->
