--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <!--
 
-so erm the ka version is really behind but idk any new way to save some space ;-;
+so erm the ka version is really behind but idk any new way to save some space ;-; except putting the main func outside
 
 sheesh honey spikes up with the new nectar
 
 r, in pep: 315b ._.
 b, in pine: 290b - 611b if u rush convert all the balloons or not O_O
 w, in coco: 600b woah ^-^
+
+i forgor bees collecting from planters :/ and due to lazyness and unclear wiki articles i removed the planter giving pollen feature
+
+planters are done, u spawn with them in ur inventory, go into a field and place it. planters then grow, but rn its accelerated by like x420 cuz its not the best to wait atleast 9 mins to see if the game works and finding out i made a typo and waited 9 mins for nothing. harvest to get nectar and loot items. some planters grow faster in certain fields, described in it's inventory description. some planters give more specific loot, mostly based on the field. for example only coconuts and tropical drinks drop from the coconut field. red fields drop more sunflower seeds and strawberry, and the said fruit's specific corresponding crafting ingredient(sunf seeds=oil, pineapple=enzymes, strawberry=red extract, blueberry=blue ext.). blue has more blueberry and pineapples. nectar type is based on planter field. some planters also give more of a type of nectar, like red clay planter gives more invigorating nectar cuz it's a red nectar with red pollen multiplier. harvesting a planter early while it's still growing gives a lot less loot/nectar based on a graph of x^2 so it's best to harvest at 100%
 
 
 -->
@@ -12268,9 +12272,10 @@ class Planter {
             dropTable.splice(dropTable.indexOf('tropicalDrink'),1)
         }
 
-        if(this.field!=='SpiderField'){
+        if(this.field!=='SpiderField'||this.field!=='CactusField'){
                 
             dropTable.splice(dropTable.indexOf('stinger'),1)
+            dropRates.stinger*=2
         }
 
         if(this.field==='StumpField'){
