--- a/index.html
+++ b/index.html
@@ -13593,7 +13593,7 @@ class LawnMower {
 
         this.dir=Math.random()<0.5?-1:1
 
-        this.pos=[-21+this.dir*13,7,-55+(Math.random()<0.3333?-2.5:Math.random()<0.5?1.5:5.5),this.dir*MATH.HALF_PI]
+        this.pos=[-21+this.dir*13,6,-55+(Math.random()<0.3333?-2.5:Math.random()<0.5?1.5:5.5),(this.dir+1)*MATH.HALF_PI]
 
         this.warning=2
         this.speed=Math.min(12.5+round*0.25,27.5)
@@ -21474,7 +21474,12 @@ meshes.lawnMower.indexBuffer=gl.createBuffer()
 verts=[]
 index=[]
 
-b(0,0,0,4,2,3,0.9,0,0)
+b(0,0,0,4,1,3,0.8,0.1,0.1)
+b(0,0,0,4*0.75,2.5,3*0.75,0.5,0.5,0.5)
+b(-3,1.5,1.25,3,0.2,0.2,0.6,0.6,0.6,0.00001,0,-50)
+b(-3,1.5,-1.25,3,0.2,0.2,0.6,0.6,0.6,0.00001,0,-50)
+b(-3-Math.cos(-50*MATH.TO_RAD)*1.5,1.5-Math.sin(-50*MATH.TO_RAD)*1.5,0,0.2,0.2,1.25*2,0.6,0.6,0.6,0.00001,0,-50)
+
 
 gl.bindBuffer(gl.ARRAY_BUFFER,meshes.lawnMower.vertBuffer)
 gl.bufferData(gl.ARRAY_BUFFER,Float32Array.from(verts),gl.STATIC_DRAW)
@@ -23124,6 +23129,8 @@ function loop(now){
     gl.uniformMatrix4fv(glCache.mob_viewMatrix,gl.FALSE,player.viewMatrix)
     
     if(user.keys.o){
+
+        objects.mobs.push(new LawnMower(5))
 
         for(let i in objects.planters){
 
