--- a/index.html
+++ b/index.html
@@ -21074,15 +21074,17 @@ player=(function(out){
 
         let amp=0.1,ef='player.capacity*='+amp+';player.pollenFromTools*='+amp+';player.pollenFromCoconuts*='+amp+';player.movementCollection*='+amp
 
+        let upgradeStacks={}
+
         for(let i in out.roboChallenge.activeUpgrades){
 
+            if(!upgradeStacks[out.roboChallenge.activeUpgrades[i]])
+                upgradeStacks[out.roboChallenge.activeUpgrades[i]]=0
+
+            upgradeStacks[out.roboChallenge.activeUpgrades[i]]++
+
+            
             let u=upgrades[out.roboChallenge.activeUpgrades[i]].stats.split(',')
-
-            if(u.indexOf('cogs')>-1){
-
-                out.roboChallenge.cogsPerRound+=3
-                continue
-            }
 
             for(let j in u){
 
@@ -21103,7 +21105,7 @@ player=(function(out){
 
         effects.roboChallengeBuff.getMessage=function(){
 
-            return 'Robo Challenge\nx'+amp+' capacity\nx'+amp+' pollen from tools\nx'+amp+' pollen from coconuts\nx'+amp+' movement collection\n\n------Upgrades------\n'+out.roboChallenge.activeUpgrades.join('\n')
+            return 'Robo Challenge\nx'+amp+' capacity\nx'+amp+' pollen from tools\nx'+amp+' pollen from coconuts\nx'+amp+' movement collection\n\n------Upgrades------\n\n'+JSON.stringify(upgradeStacks).replaceAll('":','"#').replaceAll('"','').replaceAll(',',')\n').replaceAll('#',' (x').replace('{','').replace('}',')')+'\n'
         }
 
         player.addEffect('roboChallengeBuff')
@@ -21165,7 +21167,7 @@ player=(function(out){
                 document.getElementById('roboActiveUpgradesAmount').style.display='block'
                 document.getElementById('roboActiveUpgradesAmount').innerHTML='Active Upgrades ('+out.roboChallenge.activeUpgrades.length+')'
 
-                let u=[],c=[],costs=[MATH.random(8,20)|0,MATH.random(8,20)|0,MATH.random(8,20)|0]
+                let u=[],c=[],costs=[]
 
                 let upgradeStacks={}
 
@@ -21190,6 +21192,10 @@ player=(function(out){
                     let r=(Math.random()*u.length)|0
 
                     c.push(u[r])
+
+                    let _u=upgrades[u[r]]
+                    costs.push(((MATH.random(5,9)+{common:0,rare:4,epic:7,legendary:11}[_u.rarity])/((_u.maxStacks-1)*0.09+1))|0)
+
                     u.splice(r,1)
                 }
 
