--- a/index.html
+++ b/index.html
@@ -21021,7 +21021,7 @@ player=(function(out){
         RNG:{stats:'*1.07 beeEnergy,*1.02 walkSpeed',rarity:'common',maxStacks:10},
         
         
-        VPN:{stats:'+2% defense,,*1.03 walkSpeed',rarity:'rare',maxStacks:10},
+        VPN:{stats:'+2% defense,*1.03 walkSpeed',rarity:'rare',maxStacks:10},
         Hyperbolic:{stats:'*1.06 beeAttack,*0.98 goo',rarity:'rare',maxStacks:5},
         Inject:{stats:'+1 redBeeAttack,+1 whiteBeeAttack,+1 blueBeeAttack,-1 cogsPerRound',rarity:'rare',maxStacks:3},
         Fragment:{stats:'+4% instantBombConversion',rarity:'rare',maxStacks:4},
@@ -21075,7 +21075,7 @@ player=(function(out){
 
     out.startRoboChallenge=function(){
 
-        out.roboChallenge.cogsPerRound=15
+        out.roboChallenge.cogsPerRound=12
         out.roboChallenge.beesPerRound=2
 
         out.roboChallenge.isPlaying=true
@@ -21157,6 +21157,14 @@ player=(function(out){
         }
 
         document.getElementById('roboQuestMenu').style.display='block'
+
+        for(let i=objects.mobs.length;i--;){
+
+            if(objects.mobs[i] instanceof Mechsquito||objects.mobs[i] instanceof Cogmower||objects.mobs[i] instanceof CogTurret){
+
+                objects.mobs[i].die(i)
+            }
+        }
 
         for(let i in out.roboChallenge.quest){
 
