i tried to add an icon hmmm

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@ sound is currently disabled to stop my computer from becoming a waffle cooker
 
 -->
 <html>
+
     <head>
         <meta charset="utf-8">
         <title>bss</title>
+        <link rel="icon" type="image/x-icon" href="icon-image.png">
     </head>
     <body onload='main()'>
 <canvas id='gl-canvas'></canvas>
